Editing data_mining jupyter notebook

--- a/data_mining.ipynb
+++ b/data_mining.ipynb
@@ -24,16 +24,12 @@
     "handle = Entrez.einfo()\n",
     "record = Entrez.read(handle)\n",
     "handle.close()\n",
-    "record\n",
-    "#handle = Entrez.esearch(db=\"pubmed\", term=\"oncology\", retmax=10000)\n",
-    "#record = Entrez.read(handle)\n",
-    "#handle.close()\n",
-    "#idlist = record[\"IdList\"]"
+    "record\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "95cd373d-67cb-4484-be70-ebdff0b95382",
    "metadata": {},
    "outputs": [
@@ -43,7 +39,7 @@
        "['34434786', '22909249', '19304878']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "id": "9cf05651-ec01-4532-94a0-89f3335c3e7a",
    "metadata": {},
    "outputs": [
@@ -69,58 +65,170 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "419 eDNA articles have been found\n",
-      "['36751629', '36737994', '36726876', '36710869', '36641836', '36635815', '36635221', '36628697', '36621023', '36598115', '36523524', '36523460', '36513529', '36499433', '36479437', '36475544', '36458708', '36423393', '36405018', '36381390']\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Searching pubmed papers with eDNA in their title\n",
-    "#from Bio import Entrez\n",
-    "#Entrez.email = \"parcelmaiyo@gmail.com\" #always let NCBI know who you are\n",
-    "handle = Entrez.esearch(db=\"pubmed\",term = \"eDNA[title]\", retmax=\"20\")\n",
-    "record= Entrez.read(handle)\n",
-    "handle.close()\n",
-    "print((record[\"Count\"]) ,\"eDNA articles have been found\")\n",
-    "print(record[\"IdList\"])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "c96e3d41-2538-424a-a1d8-b894f3e26f72",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'Item': [], 'Id': '36737994', 'PubDate': '2023 Feb', 'EPubDate': '2022 Dec 29', 'Source': 'Food Res Int', 'AuthorList': ['Pathiraja D', 'Cho J', 'Kim J', 'Choi IG'], 'LastAuthor': 'Choi IG', 'Title': 'Metabarcoding of eDNA for tracking the floral and geographical origins of bee honey.', 'Volume': '164', 'Issue': '', 'Pages': '112413', 'LangList': ['English'], 'NlmUniqueID': '9210143', 'ISSN': '0963-9969', 'ESSN': '1873-7145', 'PubTypeList': ['Journal Article'], 'RecordStatus': 'PubMed - indexed for MEDLINE', 'PubStatus': 'ppublish+epublish', 'ArticleIds': {'medline': [], 'pubmed': ['36737994'], 'doi': '10.1016/j.foodres.2022.112413', 'pii': 'S0963-9969(22)01471-5'}, 'DOI': '10.1016/j.foodres.2022.112413', 'History': {'medline': ['2023/02/08 06:00'], 'pubmed': ['2023/02/05 06:00'], 'received': '2022/07/27 00:00', 'revised': '2022/12/11 00:00', 'accepted': '2022/12/25 00:00', 'entrez': '2023/02/04 01:02'}, 'References': [], 'HasAbstract': IntegerElement(1, attributes={}), 'PmcRefCount': IntegerElement(0, attributes={}), 'FullJournalName': 'Food research international (Ottawa, Ont.)', 'ELocationID': 'doi: 10.1016/j.foodres.2022.112413', 'SO': '2023 Feb;164:112413'}]\n"
+      "167 eDNA articles have been found\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<enumerate at 0x7fcf18138a00>"
+       "'36670071'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Searching pubmed papers with eDNA in their title\n",
+    "from Bio import Entrez\n",
+    "Entrez.email = \"parcelmaiyo@gmail.com\" #always let NCBI know who you are\n",
+    "handle = Entrez.esearch(db=\"pubmed\",term = \"eDNA AND Kenya\", retmax=\"20\")\n",
+    "record= Entrez.read(handle)\n",
+    "handle.close()\n",
+    "print((record[\"Count\"]) ,\"eDNA articles have been found\")\n",
+    "#print(record[\"IdList\"])\n",
+    "pubids =record[\"IdList\"]\n",
+    "pubids[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c96e3d41-2538-424a-a1d8-b894f3e26f72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Retrieving summaries from primary IDs using ESummary\n",
     "#from Bio import Entrez\n",
     "#Entrez.email = \"parcelmaiyo@gmail.com\" #always let NCBI know who you are\n",
-    "handle= Entrez.esummary(db =\"pubmed\",id =\"36737994\")\n",
-    "record = Entrez.read(handle)\n",
-    "info = record[0][\"Title\"][0]\n",
-    "info\n",
+    "import pandas as pd\n",
+    "def get_records(pubids):\n",
+    "    df= pd.DataFrame(columns=[\"ID\",\"Title\",\"PubDate\"])\n",
+    "    for ids in pubids:\n",
+    "        handle= Entrez.esummary(db =\"pubmed\",id = ids)\n",
+    "        record = Entrez.read(handle)\n",
+    "        df.loc[len(df)]= [ids,record[0][\"Title\"],record[0][\"PubDate\"]]\n",
+    "    return(df)\n",
     "#print(record[1])\n",
     "\n",
-    "print(record)\n",
-    "enumerate(record)"
+    "# print(record)\n",
+    "# enumerate(record)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96ab09fe-d858-4262-8b23-f75e6600a184",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pubids\n",
+    "get_records(pubids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9fa0d0c4-ce66-4f56-a349-d89c57dfe7b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Fetching records for different eDNA techniques(Metabarcording and Quantitative PCR)\n",
+    "\n",
+    "def get_counts(searchwords):\n",
+    "    df= pd.DataFrame(columns=[\"Term\",\"Counts\",\"FirstPubdate\",\"LastPubdate\"])\n",
+    "    for word in searchwords:\n",
+    "        handle= Entrez.esearch(db=\"pubmed\",retmax=100000, term =\"%s\" %(word))\n",
+    "        record =Entrez.read(handle)\n",
+    "        pubids = (record[\"IdList\"])\n",
+    "        handle_1 = Entrez.esummary(db =\"pubmed\",id = pubids[0])\n",
+    "        handle_2 = Entrez.esummary(db=\"pubmed\",id= pubids[-1])\n",
+    "        record_1 = Entrez.read(handle_1)\n",
+    "        record_2 = Entrez.read(handle_2)\n",
+    "        df.loc[len(df)]= [word,len(pubids),record_1[0][\"PubDate\"],record_2[0][\"PubDate\"]]\n",
+    "    return(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3ef9419f-c6c1-48cc-a117-6ab920475c60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "61cec9c7-fac3-4747-a54a-0b71c65ecf78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Term</th>\n",
+       "      <th>Counts</th>\n",
+       "      <th>FirstPubdate</th>\n",
+       "      <th>LastPubdate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>eDNA</td>\n",
+       "      <td>9999</td>\n",
+       "      <td>2023 Feb 13</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Fish Genomics</td>\n",
+       "      <td>9999</td>\n",
+       "      <td>2023 Feb 13</td>\n",
+       "      <td>2018 Nov 20</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Term  Counts FirstPubdate  LastPubdate\n",
+       "0           eDNA    9999  2023 Feb 13         2021\n",
+       "1  Fish Genomics    9999  2023 Feb 13  2018 Nov 20"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from Bio import Entrez\n",
+    "Entrez.email = \"parcelmaiyo@gmail.com\" #always let NCBI know who you are\n",
+    "import pandas as pd\n",
+    "searchwords=[\"eDNA\",\"Fish Genomics\"]\n",
+    "get_counts(searchwords)"
    ]
   },
   {
